trying to fix teams spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -204,6 +204,10 @@ body {
 
 @media (max-width: 768px) {
     .w3-row {
-        margin-bottom: 40px; /* Reduce the space between rows */
+        display:block;    
+    }
+
+    .w3-third{
+        width: 100%;
     }
 }
